# arcgispro-yaml-pyt

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  run_gui.bat
.github/workflows/: ci.yml
docs/: addon-concept.md  catalog-schema.md  configuration-guide.md  metadata-guide.md  toolbox-schema.md
docs/development/: architecture.md  setup.md  testing.md
examples/: catalog.yml  demo_catalog.20260116_145942.yml.bak  demo_catalog.20260116_152834.yml.bak  demo_catalog.20260116_153118.yml.bak  demo_catalog.20260116_174214.yml.bak  demo_catalog.20260116_174222.yml.bak  demo_catalog.20260116_174238.yml.bak  demo_catalog.yml  generator_example.py  gui_launcher.py  toolbox-catalog.yml  toolbox-minimal.yml  toolbox-standalone.yml
examples/generated_toolboxes/: my_spatial_tools.pyt  my_spatial_tools.pyt.xml
scripts/: validate_config.py
src/: __init__.py
src/catalog/: __init__.py  discovery.py  generator.py  models.py  service.py  workspace.py
src/framework/: config.py  factory.py  schema.py  validators.py  yaml_tool.py
src/gui/: __init__.py  app.py  utils.py
src/gui/components/: __init__.py  generation_panel.py  sources_panel.py  toolbox_panel.py  tools_panel.py
src/tools/load_tool_metadata/: execute.py  metadata_generator.py  test_metadata_loader.py  tool.yml
tests/: conftest.py  test_buffer.py  test_buffer_tool.py  test_clip.py  test_clip_tool.py  test_config_validation.py  test_discovery.py  test_metadata_loader_tool.py  test_yaml_loading.py
tests/catalog/: test_discovery.py  test_generator.py  test_models.py  test_service.py
tests/fixtures/: README.md
toolbox/: yaml_toolbox.pyt
toolbox/framework/: __init__.py  factory.py
toolbox/framework/base/: __init__.py  yaml_tool.py
toolbox/framework/config/: __init__.py  schema.py
toolbox/framework/metadata/: __init__.py  generator.py  loader_tool.py
toolbox/framework/scripts/: __init__.py  validate_config.py
toolbox/framework/validation/: __init__.py  config_validator.py  runtime_validator.py
toolbox/tools/config/: __init__.py  toolbox.yml
toolbox/tools/helpers/: __init__.py  geoprocessing.py
toolbox/tools/utils/: __init__.py  buffer.py  clip.py
workspace/catalogs/: default.yml
workspace/toolboxes/: my_spatial_tools.pyt
(+30 files in other folders)
